--- a/index.html
+++ b/index.html
@@ -22,28 +22,45 @@
             <h1>FAQ</h1>
             <ul>
                 <li>
-                    <h5>How many team members can I invite?</h5>
-                    <!-- <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p> -->
+                    <a class="faq__list__accordion">
+                        <h5>How many team members can I invite?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="">
+                    </a>
+                    <p class="faq__answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
                 </li>
                 <li>
-                    <h5>What is the maximum file upload size?</h5>
-                    <!-- <p>No more than 2GB. All files in your account must fit your allotted storage space.</p> -->
+                    <a class="faq__list__accordion">
+                        <h5>What is the maximum file upload size?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="">
+                    </a>
+                    <p class="faq__answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
                 </li>
                 <li>
-                    <h5>How do I reset my password?</h5>
-                    <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
+                    <a class="faq__list__accordion">
+                        <h5>How do I reset my password?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="">
+                    </a>
+                    <p class="faq__answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
                 </li>
                 <li>
-                    <h5>Can I cancel my subscription?</h5>
-                    <!-- <p>Yes! Send us a message and we’ll process your request no questions asked.</p> -->
+                    <a class="faq__list__accordion">
+                        <h5>Can I cancel my subscription?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="">
+                    </a>
+                    <p class="faq__answer">Yes! Send us a message and we’ll process your request no questions asked.</p>
                 </li>
                 <li>
-                    <h5>Do you provide additional support?</h5>
-                    <!-- <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p> -->
+                    <a class="faq__list__accordion">
+                        <h5>Do you provide additional support?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="">
+                    </a>
+                    <p class="faq__answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
                 </li>
             </ul>
         </div>
     </section>
+
+    <script src="./main.js"></script>
 
 </body>
 </html>
