--- a/index.html
+++ b/index.html
@@ -18,41 +18,41 @@
             <div class="faq__bg__shadow"></div>
         </div>
     
-        <div class="faq__list">
-            <h1>FAQ</h1>
+        <div class="faq__inner">
+            <h1 class="faq__title">FAQ</h1>
             <ul>
                 <li>
-                    <a class="faq__list__accordion">
-                        <h5>How many team members can I invite?</h5>
-                        <img src="images/icon-arrow-down.svg" alt="">
+                    <a class="faq__inner__button">
+                        <h5 class="faq__question">How many team members can I invite?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="Arrow icon">
                     </a>
                     <p class="faq__answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
                 </li>
                 <li>
-                    <a class="faq__list__accordion">
-                        <h5>What is the maximum file upload size?</h5>
-                        <img src="images/icon-arrow-down.svg" alt="">
+                    <a class="faq__inner__button">
+                        <h5 class="faq__question">What is the maximum file upload size?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="Arrow icon">
                     </a>
                     <p class="faq__answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
                 </li>
                 <li>
-                    <a class="faq__list__accordion">
-                        <h5>How do I reset my password?</h5>
-                        <img src="images/icon-arrow-down.svg" alt="">
+                    <a class="faq__inner__button">
+                        <h5 class="faq__question">How do I reset my password?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="Arrow icon">
                     </a>
                     <p class="faq__answer">Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
                 </li>
                 <li>
-                    <a class="faq__list__accordion">
-                        <h5>Can I cancel my subscription?</h5>
-                        <img src="images/icon-arrow-down.svg" alt="">
+                    <a class="faq__inner__button">
+                        <h5 class="faq__question">Can I cancel my subscription?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="Arrow icon">
                     </a>
                     <p class="faq__answer">Yes! Send us a message and we’ll process your request no questions asked.</p>
                 </li>
                 <li>
-                    <a class="faq__list__accordion">
-                        <h5>Do you provide additional support?</h5>
-                        <img src="images/icon-arrow-down.svg" alt="">
+                    <a class="faq__inner__button">
+                        <h5 class="faq__question">Do you provide additional support?</h5>
+                        <img src="images/icon-arrow-down.svg" alt="Arrow icon">
                     </a>
                     <p class="faq__answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
                 </li>
